2006-10-11  Per Bothner  <per@bothner.com>

	* NodeTree.java (posLookupNamespaceURI): Simplify.  No need to search
	up the document hierarchy since each element has NamespaceBindings.

	* XName.java (isNameStart, isNamePart): New functions,
	moved from XQParser.java.
	(isName): New method.

2006-09-28  Per Bothner  <per@bothner.com>

	* NodeTree.java (ancestorAttribute): New method.

2006-09-26  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (htmlCompat): Replace field by ...
	(useEmptyElementTag):: ... new field.
	(setStyle, endGroup): Update appropriately.

	* XMLPrinter.java (writeChar): Use hex for character references.

	* XMLPrinter.java (beginGroup): If canonicalizing sort namespace
	declarations by prefix.

	* ParsedXMLToConsumer.java (closeStartTag): Use new TreeList methods
	setGroupAnd and setAttributeName instead of calling setIntN directly.

	* NodeTree.java: (duplicateAttributeMessage): New static method.

2006-09-19  Per Bothner  <per@bothner.com>

	* XMLPrinter.java (canonicalizeCDATA) New option field.
	(writeCDATA): Call plain write if canonicalizeCDATA.

2006-09-14  Per Bothner  <per@bothner.com>

	* NodeTree.java (getAttribute, getAttributeI): New methods.

2006-09-13  Per Bothner  <per@bothner.com>

	* XMLPrinter.java: Change to extend OutPort rather than PrintConsumer.
	Simpler pretty-printing - just use super's methods rather than
	casting out field to OutPort.
	(<init>, make): Change constructors and factory method appropriately.
	(setPrintXMLdecl): New setter.
	(inDocument): New field.
	(isWordChar): Remove method - use method inherited from OutPort.
	(setIndentMode): New helper method, using code moved from beginGroup.
	(beginGroup, beginDocument): Call setIndentMode.
	(beginGrouop): Move startLogicalBlock before namespace output.

	* XMLPrinter.java (endDocument): Invoke freshLine on OutPort.

2006-09-01  Per Bothner  <per@bothner.com>

	* XMLPrinter.java: Improved comments handling.
	(inComment): New field.
	(COMMENT): New constant.