@@ -1,3 +1,7 @@
+2006-10-17  Per Bothner  <per@bothner.com>
+
+	* NamespaceBinding.java (merge, mergeHelper): New method.
+
 2006-10-11  Per Bothner  <per@bothner.com>
 
 	* NodeTree.java (posLookupNamespaceURI): Simplify.  No need to search
